<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="32dp">
        <!-- 1. Select Date Section -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/form_date">

            <EditText
                android:id="@+id/fragmentDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 2. From Account Section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinnerAccountLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/form_account">

            <AutoCompleteTextView
                android:id="@+id/spinnerAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 3. Category Section -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinnerCategoryLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/form_cat">

            <AutoCompleteTextView
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 4. Item Edit text Section -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/form_item">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minLines="2"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 4. Amount Section -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/form_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 7. Comment Section -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/form_comment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Submit Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_submit"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:backgroundTint="#6B4CFF"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>